# space-traders-v2

./: .gitignore  Cargo.toml  build-help.txt  shell.nix
src/: agent_secret  error.rs  lib.rs
src/agent_secret/: secret.txt
src/api/: agent.rs  contract.rs  faction.rs  fleet.rs  mod.rs  registered_agent.rs  server_status.rs  systems.rs
src/api/fleet/: cargo.rs  chart.rs  cooldown.rs  mounts.rs  nav.rs  purchase.rs  refining.rs  refuel.rs  resources.rs  scan.rs  survey.rs
src/api/systems/: waypoint.rs
src/client/: mod.rs
src/error/: code.rs  mod.rs  server_error.rs
src/example/: mod.rs  system.rs  tutorial.rs
src/models/: agent.rs  cargo.rs  contract.rs  cooldown.rs  faction.rs  meta.rs  mod.rs  registered_agent.rs  resource.rs  server_status.rs  ship.rs  survey.rs  transaction.rs  universe.rs  wrapper.rs
src/models/ship/: chart.rs  cooldown.rs  crew.rs  engine.rs  frame.rs  fuel.rs  modules.rs  mount.rs  nav.rs  reactor.rs  refining.rs  registration.rs  requirements.rs  survey.rs
src/models/universe/: chart.rs  waypoint.rs
src/schemas/: activity_level.rs  agent.rs  chart.rs  construction.rs  contract.rs  cooldown.rs  extraction.rs  faction.rs  jump_gate.rs  market.rs  meta.rs  mod.rs  ship.rs  shipyard.rs  siphon.rs  supply_level.rs  survey.rs  system.rs  trade_good.rs  trade_symbol.rs  waypoint.rs
src/schemas/construction/: construction_material.rs
src/schemas/contract/: contract_terms.rs
src/schemas/extraction/: extraction_yield.rs
src/utils/: date_time_string.rs  deserialize.rs  mod.rs  pagination.rs  wrapper.rs
(+43 files in other folders)
