[package]
name = "space-traders-v2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paste = "1.0.14"
reqwest = { version="0.11.22", features=["json"] }
serde = { version="1.0.192", features=["derive"] }
serde_json = "1.0.108"
serde_repr = "0.1.17"

[dev-dependencies]
# tokio is used to test async functions
tokio = { version="1.34.0", features=["macros"] }



